Regression (iOS 13.4, r249142): WKWebView.loading is never reset after a Back navigation in an iframe https://bugs.webkit.org/show_bug.cgi?id=211449

Patch by Alex Christensen <achristensen@webkit.org> on 2020-05-15
Reviewed by Geoffrey Garen.

Source/WebKit:

Always call clearPendingAPIRequest in WebPageProxy::didStartProvisionalLoadForFrameShared.
r249142 regressed this and caused more "loading appears to continue forever" bugs fixed in r249890.
This should fix both, by removing the problematic half of r249142.

Covered by an API test.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didStartProvisionalLoadForFrameShared):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/Navigation.mm:
(-[LoadingObserver changesObserved]):
(-[LoadingObserver observeValueForKeyPath:ofObject:change:context:]):
(TEST):

Canonical link: https://commits.webkit.org/224854@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261761 268f45cc-cd09-0410-ab3c-d52691b4dbfc